--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 
     <h2>Design Canvas</h2>
     <table id="pixelCanvas"></table>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="designs.js"></script>
+
 </body>
 
 </html>
