--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Grid Height:
         <input type="number" id="inputHeight" name="height" min="1" value="1"> Grid Width:
         <input type="number" id="inputWidth" name="width" min="1" value="1">
-        <input type="submit" oneclick="makeGrid();return false">
+        <input type="submit">
     </form>
 
     <h2>Pick A Color</h2>
@@ -23,7 +23,7 @@
 
     <h2>Design Canvas</h2>
     <table id="pixelCanvas"></table>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="designs.js"></script>
 
 </body>
